--- a/404.html
+++ b/404.html
@@ -15,12 +15,14 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   
     <title>React App</title>
+
+    <script>
+      window.location.href = '/my-react/src/App.js';
+  </script>
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    
-    <script src="./JS/color.js"></script>
-    <script src="./JS/1337.js"></script>
   </body>
 </html>
